# Analisis_Numerico

./: .gitignore  README.md
integracion_jtuquerrez/: CMakeLists.txt  Derivacion.h  Expression.h  Romberg.h  Simpson.h  Simpson38.h  SimpsonTercio.h  Trapecio.h  main.cpp  util.h
interpolacion_jtuquerrez/: CMakeLists.txt  lagrange.h  main.cpp  newton.h  spline3.h  util.h
proyecto_raices_crquinayas_jtuquerrez/: CMakeLists.txt  Expression.h  README.md  biseccion.h  main.cpp  muller.h  newton_generalizado.h  newton_raphson.h  reglafalsa.h  secante.h  solucion.h
raices_crquinayas_jtuquerrez/raices_crquinayas_jtuquerrez/: CMakeLists.txt  biseccion.h  main.cpp  muller.h  newton_generalizado.h  newton_raphson.h  raices_crquinayas_jtuquerrez.zpr  reglafalsa.h  secante.h  solucion.h
regresion_jtuquerrez/: CMakeLists.txt  main.cpp  regresion.h  regresion_jtuquerrez.rar  util.h
